# fiducial-vision

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  build_opencv.sh  camera_config.json  fiducial_config.json  pyproject.toml
config/: calibration.json  network_config.json
device-config/: example-network-config.json
fiducialvision/: __init__.py  fiducialvision.py
fiducialvision/config/: Config.py
fiducialvision/output/: NTOutputPublisher.py  StreamServer.py
fiducialvision/pipeline/: Capture.py  FiducialDetector.py  PoseEstimator.py
orion/: __init__.py  __main__.py  coordinate_util.py  orion.py
orion/calibration/: CalibrationController.py  CalibrationPipeline.py  __init__.py
orion/config/: Config.py  config_types.py
orion/output/: NTOutputPublisher.py  StreamServer.py
orion/pipeline/: Capture.py  Pipeline.py  __init__.py  pipeline_types.py
src/fiducialvision/: __init__.py  __main__.py  coordinate_util.py  fiducialvision.py
src/fiducialvision/config/: Config.py  __init__.py  config_load.py  config_types.py
src/fiducialvision/geometry/: Pose3d.py  Rotation3d.py  __init__.py
src/fiducialvision/output/: NTOutputPublisher.py  StreamServer.py  __init__.py
src/fiducialvision/pipeline/: Capture.py  FiducialDetector.py  Pipeline.py  PoseEstimator.py  __init__.py  pipeline_types.py
