[tool.poetry]
package-mode = true
name = "orion"
version = "0.0.1"
description = "Fiducial marker detection and pose estimation system"
license = "MIT"
authors = [
    "Alvin Zhang <41vin2h4n9@gmail.com>"
]
repository = "https://github.com/mimizh2418/orion"


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
opencv-python = "^4.10.0.84"
robotpy-wpimath = "^2024.3.2.1"
pyntcore = "^2024.3.2.1"


[tool.poetry.scripts]
run-pipeline = "orion.orion:run_pipeline"


[[tool.poetry.source]]
name = "wpilib-artifactory"
url = "https://wpilib.jfrog.io/artifactory/api/pypi/wpilib-python-release-2024/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry-core.masonry.api"
