[tool.poetry]
package-mode = true
name = "orion"
version = "0.0.1"
description = "Fiducial marker detection and pose estimation system"
license = "MIT"
authors = [
    "Alvin Zhang <41vin2h4n9@gmail.com>"
]
repository = "https://github.com/mimizh2418/orion"


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
opencv-python-headless = [
    {path = "./wheels/opencv_python_headless-4.10.0.82-cp311-cp311-linux_aarch64.whl", markers = "platform_machine == 'aarch64'"},
    {version = "^4.10.0.82", markers = "platform_machine != 'aarch64'", source = "PyPI"}
]
robotpy-wpiutil = [
    {version = "^2024.3.2.1", markers = "platform_machine != 'aarch64'", source = "PyPI"},
    {version = "^2024.3.2.1", markers = "platform_machine == 'aarch64'", source = "wpilib-artifactory"}
]
robotpy-wpimath = [
    {version = "^2024.3.2.1", markers = "platform_machine != 'aarch64'", source = "PyPI"},
    {version = "^2024.3.2.1", markers = "platform_machine == 'aarch64'", source = "wpilib-artifactory"}
]
robotpy-wpinet = [
    {version = "^2024.3.2.1", markers = "platform_machine != 'aarch64'", source = "PyPI"},
    {version = "^2024.3.2.1", markers = "platform_machine == 'aarch64'", source = "wpilib-artifactory"}
]
pyntcore = [
    {version = "^2024.3.2.1", markers = "platform_machine != 'aarch64'", source = "PyPI"},
    {version = "^2024.3.2.1", markers = "platform_machine == 'aarch64'", source = "wpilib-artifactory"}
]


[tool.poetry.scripts]
run-pipeline = "orion.orion:run_pipeline"


[[tool.poetry.source]]
name = "wpilib-artifactory"
url = "https://wpilib.jfrog.io/artifactory/api/pypi/wpilib-python-release-2024/simple"
priority = "explicit"


[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry-core.masonry.api"
